@@ -10,7 +10,6 @@
 
 <properties>
 <java.version>11</java.version>
-         <junit.jupiter.version>5.4.0</junit.jupiter.version>
 <maven.compiler.source>${java.version}</maven.compiler.source>
 <maven.compiler.target>${java.version}</maven.compiler.target>
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,102 +41,48 @@
 <version>4.13.2</version>
 <scope>test</scope>
 </dependency>
-
-         
-        
 <dependency>
-<groupId>javax.servlet</groupId>
-<artifactId>javax.servlet-api</artifactId>
-<version>3.0.1</version>
-<scope>provided</scope>
-</dependency>
-
-
-<dependency>
-<groupId>mysql</groupId>
-<artifactId>mysql-connector-java</artifactId>
-<version>5.1.36</version>
-</dependency>
-
-
-
-<dependency>
-<groupId>org.junit.jupiter</groupId>
-<artifactId>junit-jupiter-engine</artifactId>
-<version>${junit.jupiter.version}</version>
-<scope>test</scope>
-</dependency>
-<dependency>
-<groupId>org.junit.jupiter</groupId>
-<artifactId>junit-jupiter-api</artifactId>
-<version>${junit.jupiter.version}</version>
-<scope>test</scope>
-</dependency>
-
-
- 
-
-    <dependency>
 <groupId>org.jacoco</groupId>
 <artifactId>jacoco-maven-plugin</artifactId>
-<version>0.8.3</version>
+<version>0.8.10</version>
 </dependency>
-
 </dependencies>
 
 <build>
 <finalName>ROOT</finalName>
 <plugins>
 <plugin>
-<artifactId>maven-clean-plugin</artifactId>
-<version>3.1.0</version>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-site-plugin</artifactId>
+<version>3.9.1</version>
 </plugin>
-<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-<plugin>
-<artifactId>maven-resources-plugin</artifactId>
-<version>3.0.2</version>
-</plugin>
-
+<!-- Maven War Plugin -->
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-compiler-plugin</artifactId>
-<version>3.8.0</version>
+<artifactId>maven-war-plugin</artifactId>
+<version>3.3.1</version>
 </plugin>
 
+<!-- Maven Surefire Plugin -->
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-surefire-plugin</artifactId>
-<version>2.22.1</version>
+<version>3.0.0-M5</version>
+<configuration>
+<argLine>--enable-preview</argLine>
+</configuration>
 </plugin>
 <plugin>
 <artifactId>maven-war-plugin</artifactId>
 <version>3.2.2</version>
 </plugin>
+<!-- JaCoCo Maven Plugin -->
 <plugin>
-<artifactId>maven-install-plugin</artifactId>
-<version>2.5.2</version>
-</plugin>
-<plugin>
-<artifactId>maven-deploy-plugin</artifactId>
-<version>2.8.2</version>
-</plugin>
-
- 
-
-        <plugin>
-<artifactId>maven-war-plugin</artifactId>
-<version>3.2.2</version>
-</plugin>
-
- 
-
-                  <plugin>
 <groupId>org.jacoco</groupId>
 <artifactId>jacoco-maven-plugin</artifactId>
-<version>0.8.7</version>
+<version>0.8.10</version>
 <executions>
 <execution>
-<id>prepare-agent</id>
 <goals>
 <goal>prepare-agent</goal>
 </goals>
